--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -3,7 +3,9 @@
     <div class="cover-inner">
       <div class="cover-contents">
         <h1>素敵な講座と出会う場所</h1>
-        <a href="" class="btn btn-success btn-lg">KOOOZAを始める</a>
+          <% unless logged_in? %>
+            <%= link_to 'KOOOZAを始める', signup_path, class: 'btn btn-success btn-lg' %>
+          <% end %>
       </div>
     </div>
   </div>
