--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,7 +16,7 @@
             <li>
               <a href="#">
                 <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                アイテムを追加
+                講座を追加
                 </a>
             </li>
 
