--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,32 @@
 <div class="user-profile">
+  <div class="row col-md-8">
   <div class="icon text-center">
     <img src="<%= gravatar_url(@user, size: 100) %>" alt="" class="img-circle">
   </div>
   <div class="name text-center">
     <h1><%= @user.name %></h1>
   </div>
+  </div>
+  
+<!--コース追加用 -->
+    <aside class="col-md-4">
+      <%= form_for(@course) do |f| %>
+        <div class="form-group">
+          <%= f.label :name, '講座名' %>
+          <%= f.text_field :name, class: 'form-control' %>
+        </div>
+        <%= f.submit '講座を追加', class: 'btn btn-success btn-block' %>
+      <% end %>
+
+    </aside>
+
+<!--コース表示用 -->
+  <div class="col-xs-12">
+    <ul class="nav nav-tabs nav-justified">
+      <li class="<%= 'active' if current_page?(user_path(@user)) %>"><%= link_to user_path(@user) do %>作成講座 <span class="badge"><%= @count_courses %></span><% end %></li>
+      <li class="<%= 'active' if !current_page?(user_path(@user)) %>"><%= link_to user_path(@user) do %>受講中 <span class="badge"><%= @count_courses %></span><% end %></li>
+      <li class="<%= 'active' if !current_page?(user_path(@user)) %>"><%= link_to user_path(@user) do %>お気に入り <span class="badge"><%= @count_courses %></span><% end %></li>
+    </ul>
+  </div>
+  <%= render 'courses/courses', courses: @courses %>
 </div>
