--- a/app/views/lessons/_form.html.erb
+++ b/app/views/lessons/_form.html.erb
@@ -1,13 +1,15 @@
-
+<% unless course.lessons.blank? %>
 <div class="row">
-  
-<%= form_for(course) do |f| %>
-  <% if course.errors.any? %>
+<% course.lessons.each do |lesson| %>
+  <% if lesson.persisted? %>
+  <%= form_for(lesson, url: course_lesson_path(course, lesson) )do |f| %>
+  <% if lesson.errors.any? %>
     <div class="alert alert-warning">
+      
     <div id="error_explanation">
       <ul>
-        <% course.errors.full_messages.each do |course| %>
-          <li><%= course %></li>
+        <% lesson.errors.full_messages.each do |lesson| %>
+          <li><%= lesson %></li>
         <% end %>
       </ul>
     </div>
@@ -17,12 +19,7 @@
   <div class="panel panel-default">
   <div class="panel-heading">
   <div class="form-group">
-  <%= f.label :name, '講座名' %>
-  <%= f.text_field :name, class: 'form-control' %>
-  </div>
-
-  <div class="form-group">
-  <%= f.label :major_no, 'レッスンNO' %>
+  <%= f.label :major_no, '大項目' %>
   <%= f.text_field :major_no, class: 'form-control' %>
   </div>
 
@@ -31,10 +28,17 @@
   <%= f.text_area :content, class: 'form-control', rows: 10 %>
   </div>
 
+  <div class="form-group">
+  <%= f.label :image_url, '画像' %>
+  <%= f.text_field :image_url, class: 'form-control' %>
+  </div>
+
   <%= f.submit '更新', class: 'btn btn-primary' %>
   </div>
   </div>
   </div>
 <% end %>
-
+<% end %>
+<% end %>
 </div>
+<% end %>
