--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,9 +14,9 @@
       <ul class="nav navbar-nav navbar-right">
           <% if logged_in? %>
             <li>
-              <a href="#">
-                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                講座を追加
+              <a href="/">
+                <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                講座一覧
                 </a>
             </li>
 
