--- a/app/views/users/show.html.2.erb
+++ b/app/views/users/show.html.2.erb
@@ -24,7 +24,8 @@
   <div class="col-xs-12">
     <ul class="nav nav-tabs nav-justified">
       <li class="<%= 'active' if current_page?(user_path(@user)) %>"><%= link_to user_path(@user) do %>作成講座 <span class="badge"><%= @count_courses %></span><% end %></li>
-      <li class="<%= 'active' if current_page?(attendindex_user_path(@user)) %>"><%= link_to attendindex_user_path(@user) do %>受講中の講座 <span class="badge"><%= @count_courses %></span><% end %></li>
+      <li class="<%= 'active' if !current_page?(user_path(@user)) %>"><%= link_to user_path(@user) do %>受講中 <span class="badge"><%= @count_courses %></span><% end %></li>
+      <li class="<%= 'active' if !current_page?(user_path(@user)) %>"><%= link_to user_path(@user) do %>お気に入り <span class="badge"><%= @count_courses %></span><% end %></li>
     </ul>
 
   <%= render 'courses/courses', courses: @courses %>
